--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Apna-Classroom</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div id="app">
@@ -18,10 +19,10 @@
     </div>
       
     <div id="dashboard-section" class="hidden">
-      <h1>Welcome, <span id="user-email"></span>!</h1>
+      <h1>Welcome, Apna Classroom</h1> 
       <button id="logout-btn">Logout</button>
     </div>
-
+   <script src="classroom.js"></script>
   </div>
 </body>
 </html>
