Added home page But no Connected to signup.html

--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Apna-Classroom</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles/signup.css">
 </head>
 <body>
   <div id="app">
@@ -19,10 +19,11 @@
     </div>
       
     <div id="dashboard-section" class="hidden">
+      <!-- <a href="../Apna_Classroom/home.html"></a> -->
       <h1>Welcome, Apna Classroom</h1> 
       <button id="logout-btn">Logout</button>
     </div>
-   <script src="classroom.js"></script>
+   <script src="signup.js"></script>
   </div>
 </body>
 </html>
